добавил 11 символов для телефона+теги swagger+фото в бд
